# homematic-mqtt-bridge

./: Dockerfile  LICENSE  README.md  config.json  hm-inventory.py  hm-mqtt-bridge.py  pyproject.toml
